# prompt_generator

./: LICENSE  README.md  requirements.md  requirements.txt  streamlit_app.py
doc/: Collaboration.md  Crews.md  Flows.md  Kickoff Crew Asynchronously.md  Knowledge.md  Planning.md  Processes.md  Quickstart.md  Tasks.md  agent.md
pages/: prompt_generator.py
prompt_solution_crew/: README.md  pyproject.toml
prompt_solution_crew/knowledge/: case_study.md  user_preference.txt
prompt_solution_crew/src/prompt_solution_crew/: crew.py  main.py
prompt_solution_crew/src/prompt_solution_crew/config/: agents.yaml  tasks.yaml
prompt_solution_crew/src/prompt_solution_crew/config/architect/: agents.yaml  tasks.yaml
prompt_solution_crew/src/prompt_solution_crew/config/engineer/: agents.yaml  tasks.yaml
