[project]
name = "prompt_solution_crew"
version = "0.1.0"
description = "prompt_solution_crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.86.0,<1.0.0"
]

[project.scripts]
prompt_solution_crew = "prompt_solution_crew.main:run"
run_crew = "prompt_solution_crew.main:run"
train = "prompt_solution_crew.main:train"
replay = "prompt_solution_crew.main:replay"
test = "prompt_solution_crew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
